Fixed image alignment on phones.

--- a/css/articles.css
+++ b/css/articles.css
@@ -4,7 +4,7 @@
 
 .articles-section img {
     max-width: 100%;
-    margin: 0 10px;
+    padding: 0 10px;
 }
 
 .section-even {
