--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@
     float: right;
     display: block;
     padding: 0 16px;
+    max-width: 100%;
 }
 
 .contacts-section .location-details {
